fix fitto cover in gridlayout
Use scaleX and scaleY if they are present. Otherwise use scale

--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -67,7 +67,7 @@
     <div style="width:50%;height:100%;float:right;overflow:auto">
       Go to:
       <div v-for="c in cards">
-        <a href="#card{{c.id}}"> {{c.name}} {{c.lastname}} </a>
+        <a href="#card{{c.id}}"> {{c.name}} {{c.lastname}} {{c.id}} </a>
       </div>
     </div>
   </div>
