switching between native and non-native

--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -40,11 +40,11 @@
       </div>
       <div>
         grid-l (min-width:751px) (columns,rows, vertical/horizontal):
-        <input type="text" id="lGrid" value="*,*,horizontal"/>
+        <input type="text" id="lGrid" value="2,2,vertical"/>
       </div>
       <div>
         grid-s (max-width:750px) (columns,rows, vertical/horizontal):
-        <input type="text" id="sGrid" value="*,*,horizontal"/>
+        <input type="text" id="sGrid" value="2,2,vertical"/>
       </div>
       <div>
         grid width :
@@ -147,8 +147,9 @@
         stage.removeAttribute('lj-auto-length');
       }
 
-
+/*
       grid._ljView.showFrame(grid._ljView.currentFrame ? grid._ljView.currentFrame.id() : undefined);
+      */
     }
 
     var cards = [];
