layerview: added special frame !toggle

--- a/examples/collapse/index.html
+++ b/examples/collapse/index.html
@@ -9,11 +9,12 @@
 
 <body>
   <div class="opener">
-  <a href="#lcollapse.!next">open</a>
-</div>
+    <a href="#lcollapse.!next">open</a>&nbsp;|
+    <a href="#lcollapse.!toggle">toggle</a>
+  </div>
   <div lj-type="stage" class="collapse" lj-auto-height="true">
     <!-- Add a stage. -->
-    <div id="lcollapse" lj-type="layer" lj-default-frame="frame1" lj-transition="inouttop">
+    <div id="lcollapse" lj-type="layer" lj-default-frame="!none" lj-transition="inouttop">
       <!-- The layer for the main content -->
       <div lj-type="frame" lj-name="frame1" lj-fit-to="responsive-width">
         <!-- The content frame -->
@@ -26,6 +27,22 @@
         </p>
         <a href="#lcollapse.!none">close</a>
         <!-- The link opening the lighbox including animation parameters -->
+      </div>
+    </div>
+  </div>
+  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.
+  </p>
+
+  <div class="opener">
+    <a href="#lcollapse2.!next">open</a>&nbsp;|
+    <a href="#lcollapse2.!toggle">toggle</a>
+  </div>
+  <div lj-type="stage" class="collapse" lj-auto-height="true">
+    <!-- Add a stage. -->
+    <div id="lcollapse2" lj-type="layer" lj-default-frame="frame1" lj-transition="inouttop">
+      <!-- The layer for the main content -->
+      <div lj-type="frame" lj-name="frame1" lj-fit-to="responsive-width">
+        <!-- The content frame -->
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
           magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
           gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
@@ -33,16 +50,17 @@
           eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
           dolor sit amet.
         </p>
+        <a href="#lcollapse2.!none">close</a>
+        <!-- The link opening the lighbox including animation parameters -->
       </div>
     </div>
   </div>
-  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-      magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-      gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-      elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-      eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-      dolor sit amet.
-    </p>
+  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+    no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+    diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+    et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+  </p>
 
 </body>
 
