Capitalize text of Github button link

--- a/test/e2e/bootstrap/index.html
+++ b/test/e2e/bootstrap/index.html
@@ -826,7 +826,7 @@
         <input type="email" name="EMAIL" id="mce-EMAIL" class="form-control required email" placeholder="enter your email for news">
         <button type="submit" class="btn btn-key" name="subscribe" id="mc-embedded-subscribe">Signup</button>
       </form>
-      <a href="https://github.com/layerJS/layerJS" class="hidden-xs btn-default btn btn-key">find us on Github</a>
+      <a href="https://github.com/layerJS/layerJS" class="hidden-xs btn-default btn btn-key">Find us on Github</a>
     </div>
   </nav>
 </div>
