static/gridlayout: example: fitto:fixed; frames must not be absolute; grid-columns: min-content and fixed width

--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -8,7 +8,13 @@
 </head>
 
 <body lj-type="stage"> <!-- Add a stage. -->
-  <div lj-type="layer" id="lgrid" lj-layout="grid"> <!-- The layer for the main content -->
+  <div lj-type="layer" id="lgrid" lj-layout="grid" lj-fit-to="fixed"> <!-- The layer for the main content -->
+    <div lj-type="frame" id="frame0" > <!-- The content frame -->
+      <p><a href="#lpopup.frame1">Lorem</a> ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+        takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+      </p>
+    </div>
     <div lj-type="frame" id="frame1" > <!-- The content frame -->
       <p><a href="#lpopup.frame1">Lorem</a> ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
